--- a/OneRoomRPGJam/OneRoomRPGJam.csproj
+++ b/OneRoomRPGJam/OneRoomRPGJam.csproj
@@ -45,6 +45,11 @@
     <Compile Include="Menu\GameState\GameState.cs" />
     <Compile Include="Menu\GameState\MainMenu.cs" />
     <Compile Include="Menu\GUI\Button.cs" />
+    <Compile Include="Entity\CollisionEntity.cs" />
+    <Compile Include="Input\Input.cs" />
+    <Compile Include="Entity\Player.cs" />
+    <Compile Include="Menu\GameState\PauseState.cs" />
+    <Compile Include="Menu\GameState\PlayState.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.manifest" />
@@ -96,6 +101,7 @@
     <Folder Include="Menu\" />
     <Folder Include="Menu\GameState\" />
     <Folder Include="Menu\GUI\" />
+    <Folder Include="Input\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
