--- a/OneRoomRPGJam/OneRoomRPGJam.csproj
+++ b/OneRoomRPGJam/OneRoomRPGJam.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Entity\Enemy.cs" />
     <Compile Include="Entity\StateMachine.cs" />
     <Compile Include="Entity\State.cs" />
+    <Compile Include="Graphics\Animation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.manifest" />
@@ -105,6 +106,7 @@
     <Folder Include="Menu\GameState\" />
     <Folder Include="Menu\GUI\" />
     <Folder Include="Input\" />
+    <Folder Include="Graphics\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
