--- a/OneRoomRPGJam/OneRoomRPGJam.csproj
+++ b/OneRoomRPGJam/OneRoomRPGJam.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Entity\State.cs" />
     <Compile Include="Graphics\Animation.cs" />
     <Compile Include="Entity\PlayerStates\PlayerIdleState.cs" />
+    <Compile Include="Entity\PlayerStates\PlayerWalkingState.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.manifest" />
