--- a/OneRoomRPGJam/OneRoomRPGJam.csproj
+++ b/OneRoomRPGJam/OneRoomRPGJam.csproj
@@ -40,24 +40,27 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Entity\Entity.cs" />
+    <Compile Include="Entities\Entity.cs" />
     <Compile Include="Menu\GameState\GameStateManager.cs" />
     <Compile Include="Menu\GameState\GameState.cs" />
     <Compile Include="Menu\GameState\MainMenu.cs" />
     <Compile Include="Menu\GUI\Button.cs" />
-    <Compile Include="Entity\CollisionEntity.cs" />
+    <Compile Include="Entities\CollisionEntity.cs" />
     <Compile Include="Input\Input.cs" />
-    <Compile Include="Entity\Player.cs" />
+    <Compile Include="Entities\Player.cs" />
     <Compile Include="Menu\GameState\PauseState.cs" />
     <Compile Include="Menu\GameState\PlayState.cs" />
-    <Compile Include="Entity\Enemy.cs" />
-    <Compile Include="Entity\StateMachine.cs" />
-    <Compile Include="Entity\State.cs" />
+    <Compile Include="Entities\Enemy.cs" />
     <Compile Include="Graphics\Animation.cs" />
-    <Compile Include="Entity\PlayerStates\PlayerIdleState.cs" />
-    <Compile Include="Entity\PlayerStates\PlayerWalkingState.cs" />
-    <Compile Include="Entity\PlayerStates\PlayerState.cs" />
-    <Compile Include="Entity\PickUp.cs" />
+    <Compile Include="Entities\PlayerStates\PlayerIdleState.cs" />
+    <Compile Include="Entities\PlayerStates\PlayerWalkingState.cs" />
+    <Compile Include="Entities\PlayerStates\PlayerState.cs" />
+    <Compile Include="Entities\PickUp.cs" />
+    <Compile Include="System\CollisionHandler.cs" />
+    <Compile Include="Entities\PlayerStates\PlayerAttackingState.cs" />
+    <Compile Include="Entities\Room.cs" />
+    <Compile Include="Entities\EntityStates\State.cs" />
+    <Compile Include="Entities\EntityStates\StateMachine.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.manifest" />
@@ -105,13 +108,16 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Entity\" />
+    <Folder Include="Entities\" />
     <Folder Include="Menu\" />
     <Folder Include="Menu\GameState\" />
     <Folder Include="Menu\GUI\" />
     <Folder Include="Input\" />
     <Folder Include="Graphics\" />
-    <Folder Include="Entity\PlayerStates\" />
+    <Folder Include="Entities\PlayerStates\" />
+    <Folder Include="System\" />
+    <Folder Include="Entities\Enemies\" />
+    <Folder Include="Entities\EntityStates\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
