Started work on CollisionHandler -Declares several collision related delegates for the various entities -Added Bat.cs -Added SkeletonMan.cs -Added several collision functions to Player.cs -Added virtual OnCollisionWithWall function in CollisionEntity.cs -Added Controller.cs -Added Outline.cs: Used to draw rectangles around hitboxes -Added Hurt function in Enemy.cs -Added several lines of pseudocode / notes / comments

--- a/OneRoomRPGJam/OneRoomRPGJam.csproj
+++ b/OneRoomRPGJam/OneRoomRPGJam.csproj
@@ -61,6 +61,9 @@
     <Compile Include="Entities\Room.cs" />
     <Compile Include="Entities\EntityStates\State.cs" />
     <Compile Include="Entities\EntityStates\StateMachine.cs" />
+    <Compile Include="Entities\Controller.cs" />
+    <Compile Include="System\EntityEvents.cs" />
+    <Compile Include="Graphics\Outline.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.manifest" />
